gcc-9 (9.3.0-10) UNRELEASED; urgency=medium

  * Update to git 20200403 from the gcc-9 branch.
    - Fix PR fortran/85982, PR tree-optimization/94103, PR middle-end/94206.

 -- Matthias Klose <doko@debian.org>  Fri, 03 Apr 2020 12:00:32 +0200

gcc-9 (9.3.0-9) unstable; urgency=medium

  * Update to git 20200402 from the gcc-9 branch.
    - Fix PR lto/94249, PR target/94052 (AArch64), PR c++/84733,
      PR fortran/94348, PR fortran/93484, PR target/94435 (AArch64),
      PR target/94368 (AArch64), PR target/92692 (AArch64),
      PR target/93819 (PPC), PR target/87583 (PPC), PR c++/90711,
      PR fortran/93498, PR fortran/94030, PR target/91833 (AArch64),
      PR target/91834 (AArch64).

  [ Matthias Klose ]
  * Update libstdc++6 symbols file for armel. Addresses: #954954.
  * Fix PR target/94368 (AArch64), proposed patch.

  [ Nicolas Boulenguez ]
  * ada-lib-info-source-date-epoch.diff: handle Invalid_Time. Closes: #954681.
  * Remove some dependencies older than oldoldstable.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Apr 2020 15:56:03 +0200

gcc-9 (9.3.0-8) unstable; urgency=medium

  * Update to git 20200324 from the gcc-9 branch.
    - Fix PR tree-optimization/94125, PR target/90763 (PPC).
  * libgcc-N-dev: Include sanitizer headers again. Closes: #954750.
  * gm2: Define lang_register_spec_functions for jit. Addresses: #954438.
  * Generate dependencies on libgcc-sN if not building the common packages.

 -- Matthias Klose <doko@debian.org>  Mon, 23 Mar 2020 18:41:59 +0100

gcc-9 (9.3.0-7) unstable; urgency=medium

  * Fix stage1 and stage2 cross builds.

 -- Matthias Klose <doko@debian.org>  Sun, 22 Mar 2020 14:04:33 +0100

gcc-9 (9.3.0-6) unstable; urgency=medium

  * Move back the libgccjit headers into libgccjit-N-dev.

 -- Matthias Klose <doko@debian.org>  Sat, 21 Mar 2020 12:37:48 +0100

gcc-9 (9.3.0-5) unstable; urgency=medium

  * Update to git 20200320 from the gcc-9 branch.
    - Fix PR tree-optimization/94163, PR rtl-optimization/94119,