@@ -3,6 +3,9 @@ gcc-9 (9.3.0-10) UNRELEASED; urgency=medium
   * Update to git 20200403 from the gcc-9 branch.
     - Fix PR fortran/85982, PR tree-optimization/94103, PR middle-end/94206.
 
+  [ Nicolas Boulenguez ]
+  * Fix #954681 but preserve checksums in libgnat .ali files.
+
  -- Matthias Klose <doko@debian.org>  Fri, 03 Apr 2020 12:00:32 +0200
 
 gcc-9 (9.3.0-9) unstable; urgency=medium
